--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest --reporter=verbose"
   },
   "dependencies": {
+    "framer-motion": "^10.12.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
